portfolio spacing fixed

--- a/style.css
+++ b/style.css
@@ -1,70 +1,82 @@
 /* Styling for index.html, portfolio.html, contact.html */
 
 /* Styling for header elements */ 
-header {background-color: #ffffff;
-        border-color: #cccccc;
-        font-family: 'Georgia', 'Times', "Times New Roman", 'serif';
-        height: 100px;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-        border-bottom: 5px solid #666666;
-        position: sticky;
+header {background-color: #f8f8f0;
+  border-color: #cccccc;
+  font-family: 'Georgia', 'Times', "Times New Roman", 'serif';
+  height: 100px;
+  width: 100%;
+  padding: 5px ;
+  margin: 0;
+  border-bottom: 2px solid #666666;
+  overflow: none;
 }
 
-/* Styling for the body element*/
-body { margin: 0px; /* This got ride of the boder around the header and the edges of the pages */
-       background-color: #f9f7fd;
-       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%2392e3d5' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
-       padding: 0px;
-       margin: 0px;
+header figure { margin-left: 150px;
 }
 
 /* Styling for Name class located in the header */
-.name { height: 75px;
-        width: 150px;
-        padding: 10px 0;
-        top: 0px;
-        left: 20%;
-        background-color: #4aaaa5;
-        color:#ffffff;
-        text-align: center;
+.name { 
+  width: 150px;
+  padding: 15px 0;
+  background-color: #4aaaa5;
+  color:#ffffff;
+  text-align: center;
+  
 }
-
-/* Styling for the top nav elements*/
-nav {  
+/* */
+.top_nav { position: fixed; /* why doesn't this move the li elements to the right?*/
+  top: 50px;
+  right: 0px;
 }
 
 /* removing the bullets from lists*/
 header ul { list-style-type: none;
-     float: right;
-     position: absolute;
-     right: -40px;
+  right: 100px;
+  width: 100%;
 }
 
 /* Makes the list for the top nav horizontal*/
 header li { display:inline;
+  padding: 20px;
 }
 
-/* Main content */
-main {  background-color: #35ec4d;
-        padding: 0px;
-        margin: 0px auto;
-        width: 960px;
-        height: 200px;
+/* Styling for the body element*/
+body { margin: 0px; /* This got ride of the boder around the header and the edges of the pages */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%2392e3d5' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
+  padding: 0px;
 }
+
+
+/* Main content */
+main {  background-color: #ffffff;
+  padding: 5px;
+  margin: 25px auto;
+  width: 960px;
+  color: #666666;
+  border: 3px;
+  border-color: #666666
+}
+/* ------------Styling specifc to About me page------------*/
 
 /* styling for aboutme section photo*/
 #aboutme_img { 
-               height: 150px;
-               width: 150px;           
+  height: 150px;
+  width: 150px;           
 }
 
-/* Portolfio Page Sytling */
+/* ------------Styling specifc to the portfolio page------------*/
 
 /* Styling images on the porfolio page*/
+.top-box .mid-box { display: flex;
+}
 
-img { height: 50px;
+.top-box img { height: 100px;
+  
+}
+
+.mid-box img { height: 100px;
+  
 }
 
 
@@ -73,20 +85,23 @@ img { height: 50px;
 
 /*  Footer Styling  ( Same for every page) */
 footer {background-color: #666666;
-        font-family: 'Arial', "Helvetica Neue", 'Helvetica', 'sans-serif'; 
-        height: 50px;
-        width: 100%;
-        border-top: 5px solid #4aaaa5;
-        color:#ffffff;
-        text-align: center;
-        position: fixed;
-        bottom: 0;
-        clear: left;
+  font-family: 'Arial', "Helvetica Neue", 'Helvetica', 'sans-serif'; 
+  height: 50px;
+  width: 100%;
+  border-top: 5px solid #4aaaa5;
+  color:#ffffff;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  clear: left;
+}
+
+
+/* ------------Styling specifc to the contact page------------*/
+
+.contactform { margin: 10px auto;
 }
 
 
 
 
-
-
-  
